# gym

./: CLAUDE.md  README.md  pyproject.toml
README/: implementation-plan.md
docs/: getting_started.md  troubleshooting.md
docs/api/: strategies.md
example/: diloco_scaling_batchsize.py  mnist.py  nanogpt.py  playground.py
example/nanogpt/: __init__.py  build_dataset.py  dataset.py  download_dataset.py  gpt_dataset.py  nanogpt.py
exogym/: __init__.py  logger.py  train_node.py  trainer.py  utils.py
exogym/strategy/: __init__.py  communicate.py  communicate_optimize_strategy.py  demo.py  diloco.py  federated_averaging.py  optim.py  sparta.py  strategy.py
exogym/strategy/demo_impl/: demo.py
